--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta name="author" content="Abril Serrano Espindola">
   <meta name="description" content="">
   <meta name="keywords" content="">
+  <meta name="theme-color" content="#5A7302">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" type="text/css" href="css/index.css">
   <title>El origen de la mujer</title>
