Logos más pequeños

--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
       <a onclick="alEntrar()">entrar</button>
     </div>
     <footer>
-      <img id="LOGO-1" src="img/LOGO_Fonca_C-03.png" alt="Logo Secretaría de Cultura y FONCA (Sistema de Apoyos a la Creación y Proyectos Culturales)">
-      <img id="LOGO-2" src="img/lafo-LOGO-BLANCO.png" alt="Logo Lafo (Laboratorio de arte y fotografía)">
+      <img id="LOGO-1" src="img/LOGO_Fonca_C-03-s.png" alt="Logo Secretaría de Cultura y FONCA (Sistema de Apoyos a la Creación y Proyectos Culturales)">
+      <img id="LOGO-2" src="img/lafo-LOGO-BLANCO-s.png" alt="Logo Lafo (Laboratorio de arte y fotografía)">
     </footer>
   </div>
   <div class="principal" id="principal">
