Link para entrar arreglado

--- a/index.html
+++ b/index.html
@@ -15,20 +15,18 @@
 <body>
   <div class="entrada" id="entrada">
     <h1>El origen de la mujer</h1>
-    <div class="but">
-      <a onclick="alEntrar()">entrar</button>
-    </div>
-    <footer>
-      <img id="LOGO-1" src="img/LOGO_Fonca_C-03-s.png" alt="Logo Secretaría de Cultura y FONCA (Sistema de Apoyos a la Creación y Proyectos Culturales)">
-      <img id="LOGO-2" src="img/lafo-LOGO-BLANCO-s.png" alt="Logo Lafo (Laboratorio de arte y fotografía)">
-    </footer>
+    <a id="button" onclick="alEntrar()">entrar</a>
+      <footer>
+        <img id="LOGO-1" src="img/LOGO_Fonca_C-03-s.png" alt="Logo Secretaría de Cultura y FONCA (Sistema de Apoyos a la Creación y Proyectos Culturales)">
+        <img id="LOGO-2" src="img/lafo-LOGO-BLANCO-s.png" alt="Logo Lafo (Laboratorio de arte y fotografía)">
+      </footer>
   </div>
   <div class="principal" id="principal">
     <main>
       <h1>El origen de la mujer</h1>
     </main>
   </div>
-  <script type="text/javascript">
+  <script>
     function alEntrar() {
       document.getElementById("entrada").style.display = "none";
       document.getElementById("principal").style.display = "block";
