Prueba de HTTP header

--- a/index.html
+++ b/index.html
@@ -1,3 +1,6 @@
+Cache-Control: max-age=3600, public
+Permissions-Policy: fullscreen=(), geolocation=*, camera=()
+
 <!DOCTYPE html>
 <html lang="es">
 
@@ -16,10 +19,10 @@
   <div class="entrada" id="entrada">
     <h1>El origen de la mujer</h1>
     <a id="button" onclick="alEntrar()">entrar</a>
-      <footer>
-        <img id="LOGO-1" src="img/LOGO_Fonca_C-03-s.png" alt="Logo Secretaría de Cultura y FONCA (Sistema de Apoyos a la Creación y Proyectos Culturales)">
-        <img id="LOGO-2" src="img/lafo-LOGO-BLANCO-s.png" alt="Logo Lafo (Laboratorio de arte y fotografía)">
-      </footer>
+    <footer>
+      <img id="LOGO-1" src="img/LOGO_Fonca_C-03-s.png" alt="Logo Secretaría de Cultura y FONCA (Sistema de Apoyos a la Creación y Proyectos Culturales)">
+      <img id="LOGO-2" src="img/lafo-LOGO-BLANCO-s.png" alt="Logo Lafo (Laboratorio de arte y fotografía)">
+    </footer>
   </div>
   <div class="principal" id="principal">
     <main>
