--- a/index.html
+++ b/index.html
@@ -1,3 +1,6 @@
+Cache-Control: max-age=3600, public
+Permissions-Policy: fullscreen=(), geolocation=*, camera=()
+
 <!DOCTYPE html>
 <html lang="es">
 
