--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="author" content="Abril Serrano Espindola">
-  <meta name="description" content="">
+  <meta name="description" content="Pieza que forma parte del proyecto El origen de la mujer de Carol Espíndola">
   <meta name="keywords" content="">
   <meta name="theme-color" content="#5A7302">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
