--- a/index.html
+++ b/index.html
@@ -7,17 +7,18 @@
   <meta name="description" content="Pieza que forma parte del proyecto El origen de la mujer de Carol Espíndola">
   <meta name="keywords" content="">
   <meta name="theme-color" content="#5A7302">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="https://use.typekit.net/oov2wcw.css">
   <link rel="stylesheet" type="text/css" href="css/index.css">
-  <script type='text/javascript' src='script/index.js'></script>
-  <script type='text/javascript' src='script/principal.js'></script>
+  <script src='script/index.js'></script>
+  <script src='script/principal.js'></script>
   <title>El origen de la mujer</title>
 </head>
 
 <body>
   <div class="entrada" id="entrada">
-    <h1>El origen de la mujer</h1>
-    <a id="button" onclick="alEntrar()">entrar</a>
+    <h1 id="titulo1">El origen de la mujer</h1>
+    <p><a id="selecEntrar" onclick="alEntrar()">entrar</a></p>
     <footer>
       <img id="LOGO-1" src="img/LOGO_Fonca_C-03-s.png" alt="Logo Secretaría de Cultura y FONCA (Sistema de Apoyos a la Creación y Proyectos Culturales)">
       <img id="LOGO-2" src="img/lafo-LOGO-BLANCO-s.png" alt="Logo Lafo (Laboratorio de arte y fotografía)">
@@ -26,12 +27,27 @@
   <div class="principal" id="principal">
     <main>
 
-      <div class="map">
-        <button type="button" onclick="mostrarLucy()" id="i">i</button>
-        <button type="button" onclick="" id="ii">ii</button>
+      <div id="map">
+        <button type="button" onclick="mostrar(this.id)" id="c01" class="map">I- Lucy, <br> o de la evolución <br> femenina</button>
+        <button type="button" onclick="" id="ii" class="map">II- Estudio de las proporciones <br> Ideales del cuerpo</button>
+        <button type="button" onclick="" id="iii" class="map">III- Lección <br> de anatomía</button>
+        <button type="button" onclick="" id="iv" class="map">IV- De <br> <em>humani <br> corporis </em> <br> fabrica</button>
+        <button type="button" onclick="" id="v" class="map">V- Sobre <br> el origen</button>
+        <button type="button" onclick="" id="vi" class="map">VI- Sobre la evolución</button>
+        <button type="button" onclick="" id="vii" class="map">VII- Antoinette</button>
+        <button type="button" onclick="" id="viii" class="map">VIII- The descent <br> of woman</button>
+        <button type="button" onclick="" id="ix" class="map">IX- The <br> sexes <br> through <br> nature</button>
+        <button type="button" onclick="" id="x" class="map">X- Sobre la anotomía</button>
+        <button type="button" onclick="" id="xi" class="map">XI- Sobre el paisaje</button>
       </div>
 
-      <img src="img/01_Lucy.png" alt="Lucy" id="img01">
+      <div class="img01, containers" id="container-imgc01">
+
+        <button type="button" class="close" aria-label="Close" onclick="cerrarImagen(this.parentNode.id)">×</button>
+        <p>I- Lucy, o de la evolución femenina</p>
+        <img src="img/01_Lucy.png" alt="Lucy" id="imgc01">
+
+      </div>
 
     </main>
     <footer></footer>
