Página principal para tablet y teléfono añadida

--- a/index.html
+++ b/index.html
@@ -28,15 +28,15 @@
     <main>
 
       <div id="map">
-        <button type="button" onclick="mostrar(this.id)" id="c01" class="map">I- Lucy, <br> o de la evolución <br> femenina</button>
-        <button type="button" onclick="" id="ii" class="map">II- Estudio de las proporciones <br> Ideales del cuerpo</button>
-        <button type="button" onclick="" id="iii" class="map">III- Lección <br> de anatomía</button>
-        <button type="button" onclick="" id="iv" class="map">IV- De <br> <em>humani <br> corporis </em> <br> fabrica</button>
-        <button type="button" onclick="" id="v" class="map">V- Sobre <br> el origen</button>
+        <button type="button" onclick="mostrar(this.id)" id="c01" class="map">I- Lucy, <br> o de la evolución femenina</button>
+        <button type="button" onclick="" id="ii" class="map">II- Estudio de las proporciones Ideales del cuerpo</button>
+        <button type="button" onclick="" id="iii" class="map">III- Lección de anatomía</button>
+        <button type="button" onclick="" id="iv" class="map">IV- De <em>humani corporis </em> fabrica</button>
+        <button type="button" onclick="" id="v" class="map">V- Sobre el origen</button>
         <button type="button" onclick="" id="vi" class="map">VI- Sobre la evolución</button>
         <button type="button" onclick="" id="vii" class="map">VII- Antoinette</button>
-        <button type="button" onclick="" id="viii" class="map">VIII- The descent <br> of woman</button>
-        <button type="button" onclick="" id="ix" class="map">IX- The <br> sexes <br> through <br> nature</button>
+        <button type="button" onclick="" id="viii" class="map">VIII- The descent of woman</button>
+        <button type="button" onclick="" id="ix" class="map">IX- The sexes through nature</button>
         <button type="button" onclick="" id="x" class="map">X- Sobre la anotomía</button>
         <button type="button" onclick="" id="xi" class="map">XI- Sobre el paisaje</button>
       </div>
